fix(form): only add whitespace labels within field groups

--- a/src/definitions/collections/form.less
+++ b/src/definitions/collections/form.less
@@ -850,7 +850,7 @@
 }
 
 .ui.ui.ui.ui.form .fields:not(.required) > label:empty::after,
-.ui.ui.ui.ui.form .field:not(.required) > label:empty::after {
+.ui.ui.ui.ui.form .fields:not(.grouped):not(.inline) > .field:not(.required) > label:empty::after {
     content: " ";
     display: inline-block;
 }
